11/6/09 use RandomBoxLayoutStrategy in Real Reaction module (images still overlap)
11/6/09 remove positioning of imageParentNodes from AbstractBeforeNode and AbstractAfterNode, shift responsibility to image layout strategies
11/6/09 first attempt at RandomBoxLayoutStrategy, has problems, see TODO list
11/6/09 used Strategy pattern for layout of images in Before and After boxes, implement "stacked" layout strategy
11/5/09 delete edu.colorado.phet.reactantsproductsandleftovers.view.CountNode, unused
11/5/09 javadoc existing code
11/5/09 delete edu.colorado.phet.reactantsproductsandleftovers.controls.IntegerSliderNode, unused (chose spinners instead of sliders)
11/5/09 delete edu.colorado.phet.reactantsproductsandleftovers.controls.IntegerTextFieldNode, unused
# 0.00.10 (36379) Nov 5, 2009
11/5/09 first version with "Real Reactions" tab
11/5/09 make Real Reactions formula look like design doc
11/5/09 show optional names below images in quantity controls and displays
11/5/09 make specialized Before/After boxes nested classes of their respective canvases
11/5/09 improve alignment of controls below Before/After boxes, center each control in its "cell"
11/5/09 simplify and document layout of Real Reaction canvas
11/5/09 simplify and document layout of Sandwich Shop canvas
11/5/09 adjust centering of play area contents
11/5/09 make Before and After boxes wider (400 -> 450)
11/5/09 make histogram bars wider (15 -> 18)
11/4/09 wire up Before and After displays for "Real Reactions" module
11/4/09 wire up radio buttons and a temporary formula in "Real Reactions" module
11/4/09 reaction models for "Real Reactions" module
11/4/09 fix leftovers histogram
11/4/09 use immutable arrays for reactants and products in chemical reaction
11/4/09 extract base classes for Before and After displays
11/4/09 add cleanup methods to anything that listens to model
11/4/09 completed generalization of After box
11/4/09 cleanup SubstanceNode when removed from scenegraph to prevent memory leak