@@ -8,8 +8,7 @@ MEDIUM PRIORITY
 - product image histogram with 3+3+3=1 Sandwich is problematic, image extends below box, hard to stack to maintain histogram look
 
 LOW PRIORITY
-- scale image files to desired size
-- clean up node scaling, it's kind of haphazard
+- scale image files to desired size, change scaling constants in RPALConstants
 - generalize any layout code that uses hardcoded offsets
 
 MIGRATE TO COMMON
